# EDIT-DSBA-QSAM

./: QSAM_project.ipynb  README.md  pyproject.toml
00_basic_statistics/SLU04 - Basic Stats with Pandas/: Exercise notebook.ipynb  Learning notebook.ipynb
00_basic_statistics/SLU04 - Basic Stats with Pandas/data/: etfs_sample.csv  returns_weekly_sp500.csv
00_basic_statistics/SLU05 - Covariance and Correlation/: Exercise notebook.ipynb  Learning notebook.ipynb
00_basic_statistics/SLU05 - Covariance and Correlation/data/: USA_cars_datasets.csv
01_stastistical_foundations/: 04_statistical_tests.ipynb
04_best_practises/: README.md
Projects/: Project Case - Boston Housing Data Analysis (Week 6).ipynb
assignments/assignment_1/: Exercise Notebook Statistical.ipynb  Exercise Notebook Stats & Probability - Solutions.ipynb  Exercise Notebook Stats & Probability.ipynb  Exercise Notebook Tests.ipynb
