[tool.poetry]
name = "edit-dsba-qsam"
version = "0.1.0"
description = ""
authors = ["Roberto Álvarez <rober.vega93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scipy = "^1.14.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
scikit-learn = "^1.5.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
